--- a/prog/.project
+++ b/prog/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>prog</name>
+	<name>BW240_UE</name>
 	<comment></comment>
 	<projects>
 	</projects>
